--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,13 @@
 [build]
-  command = "hugo"
+command = "npm install && npm run build && hugo --gc --minify"
   publish = "public"
 
 [build.environment]
   HUGO_VERSION = "0.148.0"
   HUGO_ENV = "production"
-  
+  NODE_VERSION = "18.16.0"
+
+
 
 
 
